# raytracey

./: .gitignore  .gitmodules  BvhNode.h  CMakeLists.txt  HitableList.h  JobManager.cpp  JobManager.h  README.md  Texture.h  aabb.h  camera.h  hitable.h  main.cpp  material.h  ray.h  sphere.h  utils.cpp  utils.h  vcpkg.json  vector.h
